# notes

./: .zshrc  CMakeLists.txt  Layout.vue  MongoPerf.java  OSQPSolver.cpp  PackedRecord.txt  QP_Solver.cpp  SpeedTest.java  app.css  args_parser.cpp  binaryRW.cpp  build_external.sh  chatgpt_xll.cpp  demo.yaml  etag.html  hashmapsearch.cpp  index.html  install_go.sh  lit.css  main.js  memberptr.cpp  monthlySales.json  nginx.user.conf  packed.txt  perf.cpp  perf.js  ppnode.js  serialize.h  settings.json  setup.sh  simplesearch.cpp  typeutil.h  vscode.vssettings
