cmake_minimum_required(VERSION 3.22)
project(cppfeatures)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_C_STANDARD 11)
if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif ()
set(CMAKE_C_FLAGS "-Wall -Wextra")
set(CMAKE_C_FLAGS_DEBUG "-g")
set(CMAKE_C_FLAGS_RELEASE "-flto -O3")

link_directories(/usr/lib/x86_64-linux-gnu/)
file(GLOB files "*.cpp" "*.c")
foreach (file ${files})
    get_filename_component(x ${file} NAME_WLE)
    message(${x})
    add_executable(${x} ${file})
endforeach ()
